<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodels.ShoeStoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--Uses ContraintLayout for easier view positioning-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.ShoeDetailFragment">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@{viewModel.newShoeName}"
                app:layout_constraintEnd_toEndOf="@+id/name_label"
                app:layout_constraintStart_toStartOf="@+id/name_label"
                app:layout_constraintTop_toBottomOf="@+id/name_label" />

            <TextView
                android:id="@+id/company_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/company"
                app:layout_constraintEnd_toEndOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />

            <EditText
                android:id="@+id/company_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/company_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@{viewModel.newShoeCompany}"
                app:layout_constraintEnd_toEndOf="@+id/company_label"
                app:layout_constraintStart_toStartOf="@+id/company_label"
                app:layout_constraintTop_toBottomOf="@+id/company_label" />

            <TextView
                android:id="@+id/size_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/size"
                app:layout_constraintEnd_toEndOf="@+id/company_text"
                app:layout_constraintStart_toStartOf="@+id/company_text"
                app:layout_constraintTop_toBottomOf="@+id/company_text" />

            <EditText
                android:id="@+id/size_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/size_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@{viewModel.newShoeSize}"
                app:layout_constraintEnd_toEndOf="@+id/size_label"
                app:layout_constraintStart_toStartOf="@+id/size_label"
                app:layout_constraintTop_toBottomOf="@+id/size_label" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/size_text"
                app:layout_constraintStart_toStartOf="@+id/size_text"
                app:layout_constraintTop_toBottomOf="@+id/size_text" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/description_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@{viewModel.newShoeDescription}"
                app:layout_constraintEnd_toEndOf="@+id/description_label"
                app:layout_constraintStart_toStartOf="@+id/description_label"
                app:layout_constraintTop_toBottomOf="@+id/description_label" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/description_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/save_button"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/description_text"
                app:layout_constraintTop_toTopOf="@+id/save_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>