<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:text="@string/login"
        android:layout_margin="@dimen/default_margin"/>

    <TextView
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_text_height"
        android:layout_marginHorizontal="@dimen/default_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="48dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/login"/>

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/create_new_user"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</LinearLayout>